# llvm-internals

./: .gitignore  README.md  building_llvm.md
cmake_craig_scott/Appplications/ch3minimal/build_make/: main  main_deb
cmake_craig_scott/Appplications/ch3minimal/build_multi/: main
cmake_craig_scott/Appplications/ch3minimal/source/: CMakeLists.txt  main.cpp
cmake_craig_scott/Appplications/ch4target/source/: CMakeLists.txt  src1.cpp  src1.hpp  src2.cpp  src2.hpp  src4.cpp
cmake_craig_scott/Appplications/ch5variable/: foreach  pref.json  trac1.json  trac1.txt
cmake_craig_scott/Appplications/ch5variable/source/: CMakeLists.txt  main.cxx
cmake_craig_scott/Appplications/ch6control/: CMakeLists.txt  main.cxx
cmake_craig_scott/Appplications/ch7subdirectories/: CMakeLists.txt
cmake_craig_scott/Appplications/ch7subdirectories/mysub/: CMakeLists.txt
cmake_craig_scott/Appplications/ctrflow/: CMakeLists.txt
cmake_craig_scott/Appplications/minimal/build_make/: CMakeCache.txt  Makefile  cmake_install.cmake
cmake_craig_scott/Appplications/minimal/build_multi/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  main_disc
cmake_craig_scott/Appplications/my_app_target_link/build_make/: CMakeCache.txt  Makefile  MyApp  cmake_install.cmake
cmake_craig_scott/Appplications/my_app_target_link/build_ninja/: .ninja_deps  .ninja_log  CMakeCache.txt  MyApp  build.ninja  cmake_install.cmake  libAlgo.dylib  libCollector.dylib  libEngine.dylib  libUi.dylib
cmake_craig_scott/Appplications/my_app_target_link/source/: CMakeLists.txt  main.cpp  src3.cpp  src3.hpp  src4.hpp
cmake_craig_scott/Appplications/sub/: main.cxx
cmake_craig_scott/Fundamentals/: Master_cmake_command.md  Quick_keywords_glance.md  chp1-introduction.md  chp2-setting-up-prj.md  chp3-a-minimal-project.md  chp4-building-simple-targets.md  chp5-variables.md  chp6-controlflow.md  chp7-subdirectories.md  chp8-functions-and-macros.md  chp9-Properties.md  chp9-properties-mac.md
cmake_official/: cmake_official.md
